fixed abilities wrapping

--- a/src/scss/character.scss
+++ b/src/scss/character.scss
@@ -298,6 +298,10 @@
     display: flex;
     overflow: hidden;
   }
+  .nowrap {
+    flex-wrap: nowrap;
+  }
+
   /* ----------------------------------------- */
   /*  Item Controls                            */
   /* ----------------------------------------- */
